# gmake2cmake

./: .gitignore  AGENTS.md  ARCHITECTURAL_REVIEW_SUMMARY.md  Architecture.md  CONTRIBUTING.md  COVERAGE.md  QE_DEPLOYMENT_REPORT.md  QE_TEST_SUMMARY.md  README.md  TEAM_STATUS.md  pyproject.toml  whats-next.md
docs/: Architecture.md  README.md  UnknownConstructs.md  architecture.md  configuration.md  index.md  migration.md  performance.md  testing.md  troubleshooting.md  use_cases.md
gmake2cmake/: README.md  __init__.py  benchmarks.py  cache.py  cli.py  config.py  config_schema.json  constants.py  diagnostic_codes.py  diagnostics.py  exceptions.py  exit_codes.py  fs.py  introspection.py  introspection_parser.py  introspection_reconcile.py  logging_config.py  markdown_reporter.py  parallel.py  path_utils.py  profiling.py  schema_validator.py  security.py  types.py  validation.py
tasks/: CODE_QUALITY_REVIEW.md  QUALITY_REVIEW_SUMMARY.md  TASK-0006.md  TASK-0008.md  TASK-0010.md  TASK-0012.md  TASK-0018.md  TASK-0020.md  TASK-0022.md  TASK-0024.md  TASK-0030.md  TASK-0033.md  TASK-0037.md  TASK-0039.md  TASK-0042.md  TASK-0043.md  TASK-0045.md  TASK-0046.md  TASK-0047.md  TASK-0049.md  TASK-0059.md  TASK-0060.md  TASK-0065.md  TASK-0066.md  TASK-0067.md  TASK-0068.md  TASK-0071.md  TASK-0072.md  TASK-0074.md  TASK-0075.md  TASK-0076.md
tests/: conftest.py  test_benchmarks.py  test_cache.py  test_cache_comprehensive.py  test_cli.py  test_config_manager.py  test_constants.py  test_context_managers.py  test_diagnostic_codes.py  test_diagnostic_line_context.py  test_diagnostic_registry.py  test_diagnostics.py  test_discovery.py  test_evaluator.py  test_exception_handling.py  test_exit_codes_comprehensive.py  test_filesystem.py  test_introspection.py  test_ir_builder_comprehensive.py  test_logging.py  test_parallel_comprehensive.py  test_parallel_evaluation.py  (+9 more)
(+135 files in other folders)
