[project]
name = "gmake2cmake"
version = "0.1.0"
description = "CLI tool to migrate GNU Make projects to CMake"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.1",
    "python-json-logger>=2.0.7",
]

[project.scripts]
gmake2cmake = "gmake2cmake.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
include = ["gmake2cmake*"]
exclude = ["components*", "tasks*", "tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["linux"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["gmake2cmake"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "gmake2cmake/__main__.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
